Replace victory video with kitten ch

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
       </form>
     </dialog>
 
+    <dialog id="victory-modal" aria-labelledby="victory-title">
+      <div class="victory-content">
+        <h2 id="victory-title">You cleared every card!</h2>
+        <div
+          id="victory-sprite"
+          class="kitten-sprite"
+          role="img"
+          aria-label="Animated kitten celebrating"
+        ></div>
+        <div class="victory-actions">
+          <button id="close-victory" type="button">Close</button>
+        </div>
+      </div>
+    </dialog>
+
     <script src="app.js"></script>
   </body>
 </html>
